[DEV-1085] - use resources source ids (#35)
