# pkg/clientapi/api/openapi.json
@@ -1286,6 +1286,17 @@
               "default": 0,
               "type": "integer"
             }
+          },
+          {
+            "name": "source-id",
+            "in": "query",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              },
+              "nullable": true
+            }
           }
         ],
         "responses": {
@@ -2287,6 +2298,7 @@
       "ResourceClientModel": {
         "required": [
           "id",
+          "source_id",
           "name",
           "path",
           "type",
@@ -2295,6 +2307,9 @@
         "type": "object",
         "properties": {
           "id": {
+            "type": "string"
+          },
+          "source_id": {
             "type": "string"
           },
           "name": {
